--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -7,8 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     entrypoint: /bin/bash
-    command: -c "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 manage.py runserver 0.0.0.0:8007 --nothreading --noreload"
+    command: -c "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 app.py"
     ports:
-      - 8007
       - 5678:5678
 
