--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_install:
   - python --version
 
 script: 
+  - conda create -n fenicsproject -c conda-forge fenics
+  - source activate fenicsproject
   - make project
   - make build  
 
