--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,11 @@ before_install:
   - python --version
 
 script: 
-  - conda create -n fenicsproject -c conda-forge fenics
-  - source activate fenicsproject
-  - make project
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda 
+  - make project 
   - make build  
 
