--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,24 @@
-# To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
-django==3.0.3
-gunicorn==20.0.4
+distlib==0.3.0
+Django==3.0.7
+entrypoints==0.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+oauthlib==3.1.0
+pandas==1.0.3
+pandocfilters==1.4.2
+parsel==1.6.0
+parso==0.6.2
+pyperclip==1.8.0
+virtualenv==20.0.5
+virtualenv-clone==0.5.4
+virtualenvwrapper==4.8.4
+w3lib==1.21.0
+wcwidth==0.1.9
+webencodings==0.5.1
+websockets==8.1
+widgetsnbextension==3.5.1
+wrapt==1.11.2
+xarray==0.15.1
+yarl==1.4.2
+zipp==3.0.0
+zope.interface==5.1.0
