--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ virtualenvwrapper==4.8.4
 w3lib==1.21.0
 wcwidth==0.1.9
 webencodings==0.5.1
-websockets==8.1
+# websockets==8.1
 widgetsnbextension==3.5.1
 wrapt==1.11.2
 xarray==0.15.1
