--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ entrypoints==0.3
 oauthlib==3.1.0
 parsel==1.6.0
 parso==0.6.2
+pandas == 1.0.5
 pyperclip==1.8.0
 virtualenv==20.0.5
 virtualenv-clone==0.5.4
