--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ virtualenvwrapper==4.8.4
 # webencodings==0.5.1
 # websockets==8.1
 widgetsnbextension==3.5.1
-wrapt==1.11.2
-# yarl==1.4.2
+# wrapt==1.11.2
+yarl==1.4.2
 # zipp==3.0.0
-# zope.interface==5.1.0
+zope.interface==5.1.0
